[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = []
license = {text = "MIT"}
requires-python = "<4.0,>=3.10"
dependencies = [
    "langchain-core",
    "langchain-community",
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "pytest>=8.4.2",
    "pandas>=2.3.3",
]
name = "langchain-experimental"
version = "0.3.5rc1"
description = "Building applications with LLMs through composability"
readme = "README.md"

[project.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-experimental/tree/main/libs/experimental"
"Release Notes" = "https://github.com/langchain-ai/langchain-experimental/releases"
repository = "https://github.com/langchain-ai/langchain-experimental"

[dependency-groups]
lint = [
    "ruff<0.6,>=0.5",
]


[tool.uv]
prerelease = "allow"


[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks", "examples", "example_data"]

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5"
markers = [
    "requires: mark tests as requiring a specific library",
    "asyncio: mark tests as requiring asyncio",
    "compile: mark placeholder test used to compile integration tests without running them",
]
